--- a/src/main/webapp/homeAdmi.xhtml
+++ b/src/main/webapp/homeAdmi.xhtml
@@ -30,6 +30,7 @@
                     <nav class="menu2">
                          <a href="consultarUsuarios.xhtml">Consultar Usuarios del sistema</a>
                          <a href="ConsultarIniciativas.xhtml">Consultar Iniciativas</a>
+                         <a href="buscarIniciativa.xhtml">Buscar Iniciativa</a>
                          <a href="Inicio.xhtml">Cerrar Sesion</a>
                          
                     </nav>
