--- a/src/main/webapp/homeP.xhtml
+++ b/src/main/webapp/homeP.xhtml
@@ -29,8 +29,9 @@
         <div class="menuOpciones">
                     <nav class="menu2">
                    
-                         <a href="">Consultar Iniciativas</a>
+                         
                          <a href="RegistrarIniciativa.xhtml?usuarioId=#{inicioBean.usuario.id}">Nueva Iniciativa</a>
+                         <a href="buscarIniciativa.xhtml">Buscar Iniciativa</a>
                          <a href="Inicio.xhtml">Cerrar Sesion</a>
                     </nav>
                 </div>
