--- a/src/main/webapp/perfilUsuario.xhtml
+++ b/src/main/webapp/perfilUsuario.xhtml
@@ -7,14 +7,43 @@
 
     <h:head>
         <title></title>
-		<link rel="stylesheet" href="fontello.css" />
-                <link rel="stylesheet" href="Recursos/usuarios.css" />
-                 <link rel="stylesheet" href="Recursos/menuSecundario.css" />
+		<link rel="stylesheet" href="Recursos/usuarios.css" />
+                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></link>
 	</h:head>
 	<h:body >
             <f:metadata>
                 <f:viewParam name="email" value="#{registroBean.email}" />
             </f:metadata>
+            <header>
+                <div class="contenedorlogos"> 
+                    <div id="logoescuela">
+                        <img src="Recursos/logoescuela.png" alt=""></img>
+                    </div>
+                </div>  
+            </header>
+            <section class="menu">
+                <center>
+                     <div class="container">
+                        <a class="toggleMenu" href="#" style="display: none;">Menu</a>
+                         <ul class="nav" style="display: block;">
+
+                                 <li>
+                                         <a href="homeAdmi.xhtml"><i class="fa fa-user" style="font-size:24px"></i>#{inicioBean.usuario.nombre} (#{inicioBean.usuario.rol})</a>
+                                 </li>
+                                 <li>
+                                     <a href="consultarUsuarios.xhtml"><i class="fa fa-address-card" style="font-size:24px" ></i>Consultar Usuarios del sistema</a>
+                                 </li>
+                                 <li>
+                                     <a href="ConsultarIniciativas.xhtml"><i class="fa fa-bars" style="font-size:24px" ></i>Consultar Iniciativas</a>
+                                 </li> 
+ 
+                                 <li>
+                                     <a href="Inicio.xhtml"><i class="fa fa-caret-square-o-left" style="font-size:24px" ></i>Cerrar Sesion</a>
+                                 </li> 
+                         </ul>
+                     </div>
+                 </center>       
+            </section>
             <h:form id="UsuariosForm">
               <p:dataTable id="usuarios_tabla" var="usuario" value="#{registroBean.consultarUsuario()}">
                  <p:column headerText="Nombre">
@@ -41,25 +70,20 @@
                 </h:selectOneMenu> 
                 <p:commandButton value="Actualizar" actionListener="#{registroBean.cambiarRol()}" action="consultarUsuarios.xhtml" />
             </h:form>
-
-            <header>
-                <div class="contenedor"> 
-                    <h1 class="icon-bank">Iniciativa</h1>
-                    <input type="checkbox" id="menu-bar"></input>
-                    <label class="icon-menu" for="menu-bar"></label> 
-                    <nav class="menu">
-                        <a href="homeAdmi.xhtml">#{inicioBean.usuario.nombre} (#{inicioBean.usuario.rol})</a>
-                    </nav>
+            <footer id="footerinvestigacion">
+                <div class="footercontainer">
+                    <div class="direccion">
+                        <p>ESCUELA COLOMBIANA DE INGENIERIA JULIO GARAVITO</p>
+                        <br>AK.45 No.205-59 (Autopista Norte)</br>
+                        Contact center: 57(1) 668 3600
+                        <br>Linea Nacional Gratuita: 018000112668</br>
+                        Informacion detallada en: www.escuelaing.edu.co<br></br>
+                        Vigilada Mineducacion.
+                        <br><br>Bogota, D.C. - Colombia</br></br>          
+                   </div> 
                 </div>
-            </header>
-
-            <div class="menuOpciones">
-                    <nav class="menu2">
-                         <a href="consultarUsuarios.xhtml">Consultar Usuarios del sistema</a>
-                         <a href="ConsultarIniciativas.xhtml">Consultar Iniciativas</a>
-                         <a href="Inicio.xhtml">Cerrar Sesion</a>
-                    </nav>
-                </div>
+             </footer>
+            
 
 
 	</h:body>
