--- a/src/main/webapp/perfilIniciativa.xhtml
+++ b/src/main/webapp/perfilIniciativa.xhtml
@@ -70,7 +70,7 @@
                 <h:selectOneMenu id="res" value = "#{administradorBean.estado}" > 
                     <f:selectItems value="#{administradorBean.tipoEstado}" />
                 </h:selectOneMenu> 
-                <p:commandButton value="Actualizar" actionListener="#{administradorBean.cambiarEstado()}" action="homeAdmi.xhtml" />
+                <p:commandButton value="Actualizar" actionListener="#{administradorBean.cambiarEstado()}" action="homeAdmi" />
             </h:form>
             <footer id="footerinvestigacion">
                 <div class="footercontainer">
