--- a/src/main/webapp/inicioSesion.xhtml
+++ b/src/main/webapp/inicioSesion.xhtml
@@ -26,10 +26,10 @@
                          <ul class="nav" style="display: block;">
 
                                  <li>
-                                         <a href="/inicioSesion.xhtml"><i class="fa fa-user" style="font-size:24px"></i>Iniciar Sesion</a>
+                                         <a href="inicioSesion.xhtml"><i class="fa fa-user" style="font-size:24px"></i>Iniciar Sesion</a>
                                  </li>
                                  <li>
-                                     <a href="/Registro.xhtml"><i class=" fa fa-edit" style="font-size:24px" ></i>Registrarse</a>
+                                     <a href="Registro.xhtml"><i class=" fa fa-edit" style="font-size:24px" ></i>Registrarse</a>
                                  </li>
 
                                  <li>
