--- a/src/main/webapp/homeAdmi.xhtml
+++ b/src/main/webapp/homeAdmi.xhtml
@@ -20,6 +20,8 @@
                     </div>
                 </div>  
             </header>
+        
+
         <section class="menu">
                 <center>
                      <div class="container">
@@ -36,7 +38,12 @@
                                      <a href="ConsultarIniciativas.xhtml"><i class="fa fa-bars" style="font-size:24px" ></i>Consultar Iniciativas</a>
                                  </li> 
                                     <li>
-                                     <a href="Inicio.xhtml"><i class="fa fa-caret-square-o-left" style="font-size:24px" ></i>Cerrar Sesion</a>
+                             
+                                 </li>
+                               <li>             
+                                     <h:form>                                                  
+                                         <p:commandButton value="Cerrar sesion" actionListener="#{inicioBean.reiniciar}" action="Inicio"></p:commandButton> 
+                                      </h:form>
                                  </li>
                          </ul>
                      </div>
