--- a/src/main/webapp/buscarIniciativa.xhtml
+++ b/src/main/webapp/buscarIniciativa.xhtml
@@ -23,7 +23,9 @@
                  <div class="container">
                     <a class="toggleMenu" href="#" style="display: none;">Menu</a>
                      <ul class="nav" style="display: block;">
-                     
+                            <li>
+                                     <a href="Inicio.xhtml"><i class="fa fa-home" style="font-size:24px"></i>Inicio</a>
+                            </li>
                              <li>
                                      <a href="inicioSesion.xhtml"><i class="fa fa-user" style="font-size:24px"></i>Iniciar Sesion</a>
                              </li>
