--- a/src/main/webapp/perfilIniciativaComment.xhtml
+++ b/src/main/webapp/perfilIniciativaComment.xhtml
@@ -10,7 +10,11 @@
 		<link rel="stylesheet" href="Recursos/usuarios.css" />
                 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></link>
 	</h:head>
-        <header>
+	<h:body >
+            <f:metadata>
+                <f:viewParam name="id" value="#{administradorBean.id}" />
+            </f:metadata>
+            <header>
                 <div class="contenedorlogos"> 
                     <div id="logoescuela">
                         <img src="Recursos/logoescuela.png" alt=""></img>
@@ -31,7 +35,7 @@
                                  </li>
                                  <li>
                                      <a href="ConsultarIniciativas.xhtml"><i class="fa fa-bars" style="font-size:24px" ></i>Consultar Iniciativas</a>
-                                 </li> 
+                                 </li>  
                                  <li>
                                      <a href="Inicio.xhtml"><i class="fa fa-caret-square-o-left" style="font-size:24px" ></i>Cerrar Sesion</a>
                                  </li> 
@@ -39,31 +43,32 @@
                      </div>
                  </center>       
             </section>
-	<h:body style="overflow-x:hidden; overflow-y:scroll">
-            <h:form id="IniciativasForm">
-              <p:dataTable  id="iniciativas_tabla" var="iniciativa" value="#{administradorBean.iniciativas}" scrollable="true" scrollHeight="300" >
-                <p:column headerText="Descripcion">
-                            <h:outputText value="#{iniciativa.descripcion}" />
+            <h:form id="UsuariosForm">
+              <p:dataTable id="usuarios_tabla" var="ini" value="#{administradorBean.consultarIniciativa()}">
+                 <p:column headerText="Descripcion">
+                            <h:outputText value="#{ini.descripcion}" />
                 </p:column>
-                <p:column headerText="Estado">
-                            <h:outputText value="#{iniciativa.estado}" />
-                </p:column>
+              <!-- <p:column headerText="Estado">
+                   <p:cellEditor>
+                       <f:facet name="output">  
+                            <h:outputText value="#{administradorBean.estado}" />  
+                        </f:facet> 
+                       <f:facet name="input">
+                            <h:selectOneMenu id="res" value = "#{administradorBean.estado}" > 
+                                <f:selectItems value="#{administradorBean.tipoEstado}" />
+                            </h:selectOneMenu> 
+                        </f:facet>
+                   </p:cellEditor>
+                </p:column> --> 
                 <p:column headerText="Fecha_Creacion">
-                    <h:outputText value="#{iniciativa.fechaCreacion}" />
+                    <h:outputText value="#{ini.fechaCreacion}" />
                 </p:column>
                 <p:column headerText="Area">
-                    <h:outputText value="#{iniciativa.usuario.area}" />
-		</p:column>
-                <p:column headerText="Palabras clave">
-                    <h:outputText value="#{iniciativa.palabrasClave}" />
-		</p:column>
-                <p:column headerText="Iniciativa">
-			<p:button outcome="perfilIniciativa.xhtml?id=#{iniciativa.id}" value="Ver Iniciativa" />
-		</p:column>	
-                <p:column headerText="Comentario Iniciativa">
-			<p:button outcome="perfilIniciativaComment.xhtml?id=#{iniciativa.id}" value="Ir a Iniciativa" />
-		</p:column>
+                            <h:outputText value="#{ini.usuario.area}" />
+                </p:column>
             </p:dataTable>
+            <br><p:inputTextarea rows="10" cols="40" id="Comentario" placeholder="&#2118; Comentario" value="#{administradorBean.comentario}"> </p:inputTextarea></br>
+            <p:commandButton value="Comentar" actionListener="#{administradorBean.comentarIniciativas(inicioBean.usuario.id)}" action="homeAdmi" />
             </h:form>
             <footer id="footerinvestigacion">
                 <div class="footercontainer">
@@ -79,6 +84,7 @@
                 </div>
              </footer>
             
+
 
 	</h:body>
 	
