registrar usuario fixed

--- a/src/main/webapp/Registro.xhtml
+++ b/src/main/webapp/Registro.xhtml
@@ -55,9 +55,11 @@
                     </div>
                         <br><p:inputText id="nombre" placeholder="&#128100; Nombre" value="#{registroBean.nombre}"> </p:inputText></br>
                         <br><p:inputText id="correo" placeholder="&#128386; Correo" value="#{registroBean.email}" > </p:inputText></br>
+                        <br><p:inputText id="area" placeholder="&#128386; Area" value="#{registroBean.area}" > </p:inputText></br>
+
                         <br><p:inputText id="contrasena" placeholder="&#128272; Contraseña" type="password" value="#{registroBean.contrasena}"> </p:inputText></br>
                         <div id="Botones">
-                            <p:commandButton  value="Registrarse" actionListener="#{registroBean.registrarUsuario(registroBean.nombre,registroBean.email,registroBean.contrasena)}" action="inicioSesion.xhtml" />
+                            <p:commandButton  value="Registrarse" actionListener="#{registroBean.registrarUsuario(registroBean.nombre,registroBean.email,registroBean.contrasena,registroBean.area)}" action="inicioSesion.xhtml" />
                         </div>
                 </h:form>
             </center>
