--- a/src/main/webapp/VerIniciativas.xhtml
+++ b/src/main/webapp/VerIniciativas.xhtml
@@ -49,20 +49,20 @@
             </section>
         
         <h:form id="iniciativaForm">
-            <p:dataTable id="iniciativa_tabla" rows="3" var="iniciativa" value="#{iniciativaBean.iniciativas}" scrollable="true" scrollHeight="300">
-		<p:column headerText="Descripcion">
+            <p:dataTable id="iniciativa_tabla" rendered="true"  rows="3" paginator="true" var="iniciativa" value="#{iniciativaBean.iniciativas}" scrollable="true" scrollHeight="300">
+		<p:column headerText="Descripcion"  sortBy="#{iniciativa.descripcion}">
                     <h:outputText value="#{iniciativa.descripcion}" />
 		</p:column>
-		<p:column headerText="Estado">
+		<p:column headerText="Estado" sortBy="#{iniciativa.estado}">
                     <h:outputText value="#{iniciativa.estado}" />
 		</p:column>
-		<p:column headerText="Fecha_Creacion">
+		<p:column headerText="Fecha_Creacion" sortBy="#{iniciativa.fechaCreacion}">
                     <h:outputText value="#{iniciativa.fechaCreacion}" />
 		</p:column>
-		<p:column headerText="Area">
+		<p:column headerText="Area" sortBy="#{iniciativa.usuario.area}">
                     <h:outputText value="#{iniciativa.usuario.area}" />
 		</p:column>
-                <p:column headerText="Palabras clave">
+                <p:column headerText="Palabras clave" sortBy="#{iniciativa.palabrasClave}">
                     <h:outputText value="#{iniciativa.palabrasClave}" />
 		</p:column>
             </p:dataTable>
