--- a/src/main/webapp/ConsultarIniciativas.xhtml
+++ b/src/main/webapp/ConsultarIniciativas.xhtml
@@ -32,6 +32,9 @@
                                  <li>
                                      <a href="ConsultarIniciativas.xhtml"><i class="fa fa-bars" style="font-size:24px" ></i>Consultar Iniciativas</a>
                                  </li> 
+                             <li>
+                                    <a href="buscarIniciativaHomeA.xhtml"><i class="fa fa-search" style="font-size:24px" ></i>Buscar Iniciativas</a>
+                                </li>
                                  <li>
                                      <a href="Inicio.xhtml"><i class="fa fa-caret-square-o-left" style="font-size:24px" ></i>Cerrar Sesion</a>
                                  </li> 
